<?xml version="1.0"?>
<package>
  <name>katana_description</name>
  <version>1.1.1</version>
  <description>
    This package contains an URDF description of the Katana arm and all supporting mesh files.
  </description>
  <author email="mguenthe@uni-osnabrueck.de">Martin Günther</author>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Günther</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/katana_description</url>

  <build_depend>urdf</build_depend>
  <build_depend>convex_decomposition</build_depend>
  <build_depend>ivcon</build_depend>
  <build_depend>transmission_interface</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>transmission_interface</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
