<?xml version="1.0"?>
<package>
  <name>katana_gazebo_plugins</name>
  <version>1.1.1</version>
  <description>
    This package provides Gazebo plugins to simulate the Katana arm.
  </description>
  <author email="mguenthe@uni-osnabrueck.de">Martin Günther</author>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Günther</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/katana_gazebo_plugins</url>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>katana_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>katana_msgs</run_depend>
  <run_depend>control_toolbox</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
