<?xml version="1.0"?>
<package>
  <name>katana_msgs</name>
  <version>1.1.1</version>
  <description>
     This package contains messages specific to the Neuronics Katana arm.
  </description>
  <author email="mguenthe@uni-osnabrueck.de">Martin Günther</author>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Günther</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/katana_msgs</url>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
