<?xml version="1.0"?>
<package>
  <name>katana_teleop</name>
  <version>1.1.1</version>
  <description>
     This package provides tele-operation nodes to control the Neuronics Katana 450 arm via keyboard commands or with a playstation 3 controller.
  </description>
  <author email="hdeeken@uni-osnabrueck.de"> Henning Deeken</author>
  <maintainer email="hdeeken@uni-osnabrueck.de"> Henning Deeken</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/katana_teleop</url>

  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>katana_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>katana_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
