<?xml version="1.0"?>
<package>
  <name>katana_tutorials</name>
  <version>1.1.1</version>
  <description>
     This package contains test and demo programs for the katana_driver stack.
  </description>
  <author email="mguenthe@uni-osnabrueck.de">Martin Günther</author>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Günther</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/katana_tutorials</url>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
