<?xml version="1.0"?>
<package>
  <name>kni</name>
  <version>1.1.1</version>
  <description>
     This package provides the third-party KNI (Katana Native Interface) library for Katana
     robot arms.

     Instead of using the KNI library directly, the <a href="/wiki/katana">katana</a>
     package should be used for communication with the Katana arm.
  </description>
  <author email="mguenthe@uni-osnabrueck.de">Martin Günther</author>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Günther</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/kni</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>

  <run_depend>boost</run_depend>
</package>
